# prdoc

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README_src.adoc  build.rs  justfile  prdoc.toml  prdoc_schema_user.json  rustfmt.toml  schema.json  schema_user.json  template.prdoc
.github/workflows/: docker_build.yml  docker_publish.yml  publish.yml  quick-check.yml
cli/: Cargo.toml  README.md  build.rs
cli/src/: main.rs  opts.rs
cli/tests/: check.rs  common.rs  generate.rs  load.rs  scan.rs  schema.rs
doc/: anchors.adoc  authoring.adoc  config.adoc  container.adoc  docker.adoc  features.adoc  index.adoc  install.adoc  intro.adoc  paths.adoc  philosophy.adoc  schema.adoc  shell-completions.adoc
doc/cli/: check.adoc  generate.adoc  index.adoc  load.adoc  scan.adoc  schema.adoc  usage.adoc
prdoclib/: Cargo.toml  README.md  schema.json  template.prdoc
prdoclib/src/: common.rs  config.rs  doc_filename.rs  docfile.rs  docfile_wrapper.rs  docfilename.rs  error.rs  lib.rs  prdoc_schema_user.json  prdoc_source.rs  schema.rs  schema_user.json  title.rs  utils.rs
prdoclib/src/commands/: archive.rs  check.rs  generate.rs  load.rs  mod.rs  scan.rs  schema.rs  utils.rs  version.rs
scripts/: build-doc.sh
src/: doc_filename.rs  docfile.rs  docfile_wrapper.rs  error.rs  lib.rs  main.rs  schema.rs  title.rs
src/commands/: check.rs  generate.rs  scan.rs
tests/: prdoc.toml
tests/data/: pr_1_invalid.prdoc
tests/data/all/: pr_1225.prdoc  pr_1226.prdoc  pr_1234_some_test_minimal.prdoc  pr_1235 - junk.prdoc  pr_1238_.prdoc  pr_1239_no migrations.prdoc  pr_1244_anchoring.prdoc
tests/data/lists/advanced/: list_all_good.txt  list_empty.txt  list_some_bad.txt
tests/data/lists/simple/: all_good.txt  some_good.txt
tests/data/some/: pr_1235 - junk.prdoc  pr_1236_host-fn.prdoc  pr_1238_.prdoc  pr_1239 Whatever.prdoc
ui/: gh_pages.sh  index.html  package.json
ui/src/: index.css  main.tsx  router.tsx  schema.ts
ui/src/components/: Prdoc.css  Prdoc.tsx
ui/src/pages/: PrdocPage.tsx
