[workspace.package]
version = "0.1.0"
authors = ["chevdor <chevdor@gmail.com>", "Wilfried Kopp <wilfried@parity.io>", "Yuri Volkov <0@mcornholio.ru>"]
edition = "2021"
homepage = "https://github.com/paritytech/prdoc"
keywords = ["cli", "documentation", "parity"]
license = "MIT"
repository = "https://github.com/paritytech/prdoc"

[workspace]
resolver = "2"
members = [
	"cli",
	"prdoclib",
]

[profile.production]
inherits = "release"
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1
