[package]
authors = ["Chevdor <chevdor@gmail.com>"]
name = "prdoc"
version = "0.0.0"
edition = "2021"
description = "prdoc is a cli"
homepage = "https://github.com/Chevdor/prdoc"
keywords = ["Chevdor"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Chevdor/prdoc"

[dependencies]
assert_cmd = "2.0"
env_logger = "0.10"
log = "0.4"

clap = { version = "4", features = [
    "derive",
    "env",
    "unicode",
    "cargo",
    "color",
    "help",
    "usage",
    "error-context",
    "suggestions",
] }
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9", optional = false }
serde_json = { version = "1.0", optional = false }
prdoclib = { path = "../prdoclib" }
exitcode = "1.1"

[dev-dependencies]
assert_cmd = "2.0"
