[package]
name = "prdoc"
description = "prdoc is a cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true

readme = "README.md"

[dependencies]
prdoclib = { path = "../prdoclib", version = "0.1.0" }

log = "0.4"
exitcode = "1.1"
assert_cmd = "2.0"
color-eyre = "0.6"
env_logger = "0.11"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9", optional = false }
serde_json = { version = "1.0", optional = false }
clap = { version = "4", features = [
    "derive",
    "env",
    "unicode",
    "cargo",
    "color",
    "help",
    "usage",
    "error-context",
    "suggestions",
] }

[dev-dependencies]
assert_cmd = "2.0"
