[package]
authors = ["Chevdor <chevdor@gmail.com>"]
name = "prdoclib"
version = "0.0.0"
edition = "2021"
description = "prdoclib is a lib"
homepage = "https://github.com/Chevdor/prdoclib"
keywords = ["Chevdor"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Chevdor/prdoclib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.3"
valico = { version = "4.0.0", git ="https://github.com/s-panferov/valico", branch = "master", features = ["js"] }
serde_yaml = { version = "0.9", optional = false }
serde_json = { version = "1.0", optional = false }
thiserror = "1.0"
