[package]
name = "prdoclib"
description = "prdoclib is a lib"
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
log = "0.4"
regex = "1.9"
exitcode = "1.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9", optional = false }
serde_json = { version = "1.0", optional = false }
valico = { version = "4.0", default-features = false, features = [] }
project-root = "0.2.2"
toml = "0.8.2"
